--- a/src/main/webapp/contact.css
+++ b/src/main/webapp/contact.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400");
-
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
 
