--- a/src/main/webapp/form.css
+++ b/src/main/webapp/form.css
@@ -6,11 +6,10 @@ body {
 
 h2 {
     text-align: center;
-    text-decoration: underline;
 }
 
 form {
-    width: 300px;
+    width: 700px;
     background: #fff;
     padding: 15px 40px 40px;
     border: 1px solid #ccc;
@@ -105,4 +104,35 @@ table, th, td {
 
 #container #content {
     margin-top: 20px;
+}
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #B0C4DE;
+    border: 1;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    width: 20%;
+}
+
+a:link {
+    color: #4682B4;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.homepage {
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
