--- a/src/main/webapp/table.css
+++ b/src/main/webapp/table.css
@@ -25,7 +25,7 @@ input {
 
 .right {
     position: absolute;
-    padding-top: 15px;
+    margin-top: 15px;
     right: 16px;
     font-size: 18px;
 }
